Fixing background gradient not stretching issue

--- a/app/styles/layout/_body.scss
+++ b/app/styles/layout/_body.scss
@@ -1,15 +1,22 @@
 /* body */
+html {
+  height: 100%;
+}
 
 body {
     background: black;
     background-repeat: no-repeat;
     font-family: $lato;
     background-size: cover;
+    height: 100%;
 }
 
 // outer-container for background image
 #outer-container {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.8) 15%, rgba(0, 0, 0, 0.2) 40%, rgba(0, 0, 0, 1) 90%);
+    background-image: linear-gradient(rgba(0, 0, 0, 0.85) 15%, rgba(0, 0, 0, 0.2) 40%, rgba(0, 0, 0, 1) 90%);
+    height: 100%;
+    background-attachment: fixed;
+    margin:0;
 }
 
 #app {
